# NEXUSLANG

./: .gitignore  ARCHITECTURE_AUDIT_NEXUSLANG.md  AUTH_OPERATIONS.md  COMPATIBILITY.md  GITHUB_RELEASE.md  MEMORIA_NEXUSLANG.md  MEMORY.md  MODEL_OPERATIONS.md  PACKAGE_MANAGER.md  PLANO_NEXUSLANG.md  README.md  RELEASE.md  RELEASE_NOTES.md  SIGNING.md  STORAGE_BACKUP_RESTORE.md  VERSIONING.md  nexuslang-playground.html  nexuslang-playground.js
nexuslang-src/: Cargo.toml  DIAGNOSTICS_JSON_CONTRACT.md  MODULES_IMPORTS_ARCHITECTURE.md  ROADMAP.md  SYNTAX_1_0.md  TYPED_HIR_ARCHITECTURE.md
nexuslang-src/docs/: project-maturity-model.md
nexuslang-src/examples/: auth_secure_crm.nx  diagnostic_report_tooling.rs  erp_basico.nx  erp_primitivas_reais.nx  model_instance_route.nx  openapi_qa.nx  runtime_services.nx  storage_backup_restore_inventory.nx  tipos_avancados.nx
nexuslang-src/examples/erp_basico_multi/: business.nx  main.nx  models.nx  payroll.nx
nexuslang-src/nexus-lsp/: Cargo.toml  README.md
nexuslang-src/nexus-lsp/src/: lib.rs  main.rs
nexuslang-src/src/: auth_ops.rs  docs.rs  hir.rs  lib.rs  main.rs  model_ops.rs  module_loader.rs  package_manager.rs  route_hir.rs  runtime_env.rs  test_runner.rs  wasm.rs
nexuslang-src/src/ast/: mod.rs
nexuslang-src/src/checker/: auth_decl.rs  auth_static_ops.rs  binding_resolution.rs  expr.rs  function_decl.rs  hir_args.rs  hir_expr.rs  hir_metadata.rs  mod.rs  (+17 more)
nexuslang-src/stdlib/: accounting.nx  banking.nx  collections.nx  commerce.nx  config.nx  crm.nx  crypto.nx  csv.nx  customer.nx  date.nx  discount.nx  env.nx  http.nx  inventory.nx  invoice.nx  json.nx  kpi.nx  ledger.nx  log.nx  math.nx  money.nx  number.nx  pagination.nx  path.nx  payment.nx  procurement.nx  project.nx  report.nx  sales.nx  security.nx  shipping.nx  string.nx  supplier.nx  task.nx  tax.nx  time.nx  validation.nx  warehouse.nx
nexuslang-src/tests/: cli.rs  cli_package_manager.rs  core.rs
nexuslang-src/web/: README.md  nexuslang_playground.wasm
(+43 files in other folders)
