[package]
name = "nexuslang"
version = "0.1.1"
edition = "2021"
description = "NexusLang — ERP-first programming language"
authors = ["NexusLang Team"]

[[bin]]
name = "nexus"
path = "src/main.rs"

[lib]
name = "nexuslang"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
argon2 = { version = "0.5", features = ["std"] }
rand_core = { version = "0.6", features = ["getrandom"] }
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
