[workspace]
members = ["nexus-lsp"]
default-members = ["."]
resolver = "2"

[package]
name = "nexuslang"
version = "0.2.0-rc.1"
edition = "2021"
description = "NexusLang — ERP-first programming language"
authors = ["NexusLang Team"]

[[bin]]
name = "nexus"
path = "src/main.rs"

[lib]
name = "nexuslang"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
sha2 = "0.10"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
argon2 = { version = "0.5", features = ["std"] }
rand_core = { version = "0.6", features = ["getrandom"] }
rusqlite = { version = "0.31", features = ["bundled"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
